# postal-dnsbl-monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  RUNBOOK.md  docker-compose.yml  main.py  pyproject.toml  run-dryrun.sh  run.sh
.opencode/command/: speckit.analyze.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/memory/: constitution.md
.specify/scripts/bash/: create-new-feature.sh
.specify/templates/: tasks-template.md
kubernetes/: configmap.yaml  cronjob.yaml  secret.yaml
mariadb-dev/initdb/: 01-init-postal.sql
specs/001-postal-dnsbl-monitor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-postal-dnsbl-monitor/checklists/: requirements.md
specs/002-dnsbl-health-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  config.py  main.py
src/models/: dns_result.py  dnsbl_health.py  ip_record.py  state_transition.py
src/services/: database.py  dns_checker.py  health_reporter.py  health_tracker.py  jira_client.py  logger.py
src/utils/: ip_utils.py  network_check.py  retry.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_deduplication.py  test_health_output.py  test_idempotency.py  test_invariants.py
tests/unit/: test_config.py  test_dns_result.py  test_dnsbl_health.py  test_health_reporter.py  test_health_tracker.py  test_ip_utils.py  test_network_check.py  test_state_transition.py
(+4 files in other folders)
