[project]
name = "postal-dnsbl-monitor"
version = "1.0.0"
description = "Stateless DNSBL monitoring CronJob for Postal mail server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dnspython>=2.4.0",
    "jira>=3.5.0",
    "mysql-connector-python>=8.0.0",
    "python-json-logger>=2.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "testcontainers>=3.7.0",
    "responses>=0.23.0",
    "ruff>=0.8.0",
    "jsonschema>=4.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
    "testcontainers>=4.13.3",
    "jsonschema>=4.17.0",
]
